@@ -5,6 +5,7 @@ import (
 	"time"
 	"bytes"
 	"errors"
+	"encoding/binary"
 	"github.com/piotrnar/gocoin/lib/btc"
 )
 
@@ -12,6 +13,12 @@ func (ch *Chain) CheckBlock(bl *btc.Block) (er error, dos bool, maybelater bool)
 	// Size limits
 	if len(bl.Raw)<81 || len(bl.Raw)>btc.MAX_BLOCK_SIZE {
 		er = errors.New("CheckBlock() : size limits failed")
+		dos = true
+		return
+	}
+
+	if bl.Version()==0 {
+		er = errors.New("CheckBlock() : Block version 0 not allowed")
 		dos = true
 		return
 	}
@@ -64,6 +71,31 @@ func (ch *Chain) CheckBlock(bl *btc.Block) (er error, dos bool, maybelater bool)
 		}
 	}
 
+	// Count block versions within the Majority Window
+	n := prevblk
+	for cnt:=uint(0); cnt<ch.Consensus.Window && n!=nil; cnt++ {
+		ver := binary.LittleEndian.Uint32(n.BlockHeader[0:4])
+		if ver >= 2 {
+			bl.Majority.V2++
+			if ver >= 3 {
+				bl.Majority.V3++
+			}
+		}
+		n = n.Parent
+	}
+
+	if bl.Version()<2 && bl.Majority.V2>=ch.Consensus.RejectBlock {
+		er = errors.New("CheckBlock() : Rejected nVersion=1 block")
+		dos = true
+		return
+	}
+
+	if bl.Version()<3 && bl.Majority.V3>=ch.Consensus.RejectBlock {
+		er = errors.New("CheckBlock() : Rejected nVersion=2 block")
+		dos = true
+		return
+	}
+
 	if bl.Txs==nil {
 		er = bl.BuildTxList()
 		if er != nil {
@@ -73,14 +105,7 @@ func (ch *Chain) CheckBlock(bl *btc.Block) (er error, dos bool, maybelater bool)
 	}
 
 	if !bl.Trusted {
-		if bl.Version()==0 || (height>=ForceBlockVer2From && !ch.testnet() && bl.Version()<2) ||
-				(height>=ForceBlockVer3From && !ch.testnet() && bl.Version()<3) {
-			er = errors.New("CheckBlock() : Block version too low: "+bl.Hash.String())
-			dos = true
-			return
-		}
-
-		if bl.Version()>=2 {
+		if bl.Version()>=2 && bl.Majority.V2>=ch.Consensus.EnforceUpgrade {
 			var exp []byte
 			if height >= 0x800000 {
 				if height >= 0x80000000 {
